--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "personal-library-manager"
 version = "0.1.0"
 description = "A Streamlit-based personal library manager"
-authors = ["Roohia Bashir <roohiabashir1994@gmail.com>"]
+author = ["Roohia Bashir <roohiabashir1994@gmail.com>"]
 readme = "README.md"
 requires-python = ">=3.11"
 streamlit = "^1.0"
