--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,17 @@
 [project]
-name = "library-manager"
+name = "personal-library-manager"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
-"type": "module"
+dependencies = [
+    "ruff>=0.9.10",
+    "streamlit>=1.43.1",
+]
+
+[project.scripts]
+personal-library-manager = "personal-library-manager:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
